--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-elektra (0.8.13-1) UNRELEASED; urgency=medium
+elektra (0.8.13-1) unstable; urgency=medium
 
   * New upstream version.
 
- -- Markus Raab <debian@markus-raab.org>  Tue, 08 Sep 2015 13:57:28 +0200
+ -- Markus Raab <debian@markus-raab.org>  Thu, 17 Sep 2015 19:42:21 +0200
 
 elektra (0.8.12-1) unstable; urgency=low
 
