--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-elektra (0.8.14-1) UNRELEASED; urgency=medium
+elektra (0.8.14-1) unstable; urgency=medium
 
   * New upstream version.
 
- -- Markus Raab <debian@markus-raab.org>  Thu, 19 Nov 2015 20:34:32 +0100
+ -- Markus Raab <debian@markus-raab.org>  Thu, 19 Nov 2015 20:34:45 +0100
 
 elektra (0.8.13-1) unstable; urgency=medium
 
