add my name to the AUTHORS list

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -83,5 +83,12 @@ documentation, new README.md, zeromq, web ui
 Kurt Micheli <e1026558@student.tuwien.ac.at>
 Optimizing ksLookup with order preserving minimal perfect hash map, markdown link converter for doxygen
 
+
 Alexander Rössler <mail@roessler.systems>
 improvements to the dbus plugin
+
+
+Peter Nirschl <peter.nirschl@gmail.com>
+development of the crypto plugin, minor bug fixes
+Devel on: Fedora
+Test on: Fedora, Debian, Mac OS X
