Debian Package 0.8.15 (UNRELEASED)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+elektra (0.8.15) UNRELEASED; urgency=medium
+
+  * New upstream version
+
+ -- Markus Raab <debian@markus-raab.org>  Mon, 15 Feb 2016 11:54:58 +0100
+
 elektra (0.8.14-1) unstable; urgency=medium
 
   * New upstream version.
