--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+elektra (0.8.16-1) UNRELEASED; urgency=medium
+
+  * New upstream version.
+
+ -- Markus Raab <debian@markus-raab.org>  Tue, 26 Apr 2016 22:04:12 +0200
+
 elektra (0.8.15-1) unstable; urgency=medium
 
   * New upstream version
