--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -38,6 +38,8 @@ Devel/Test on: Debian Stable
 Charles Lindsay
 ni library
 
+Gabriel Rauter <rauter.gabriel@gmail.com>
+xdg-icon theme, ansi colors in terminal kdb
 
 Avi Alkalay <avi@unix.sh>
 Initial concept, previous website
