clang-format fix and different AUTHORS message

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -39,7 +39,7 @@ Charles Lindsay
 ni library
 
 Gabriel Rauter <rauter.gabriel@gmail.com>
-xdg-icon theme, ansi colors in terminal kdb
+desktop environment integration & usability
 
 Avi Alkalay <avi@unix.sh>
 Initial concept, previous website
