--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+elektra (0.8.17-1) UNRELEASED; urgency=medium
+
+  * New upstream version.
+
+ -- Markus Raab <debian@markus-raab.org>  Sun, 12 Jun 2016 10:08:44 +0200
+
 elektra (0.8.16-1) unstable; urgency=medium
 
   * New upstream version.
