--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-elektra (0.8.17-1) UNRELEASED; urgency=medium
+elektra (0.8.17-1) unstable; urgency=medium
 
   * New upstream version.
 
- -- Markus Raab <debian@markus-raab.org>  Sun, 12 Jun 2016 10:08:44 +0200
+ -- Markus Raab <debian@markus-raab.org>  Tue, 14 Jun 2016 19:28:38 +0200
 
 elektra (0.8.16-1) unstable; urgency=medium
 
