doc: add link to Elektra itself

--- a/doc/paper/paper.bib
+++ b/doc/paper/paper.bib
@@ -1,3 +1,11 @@
+@online{elektra,
+  author = {Markus Raab},
+  title = {Elektra},
+  year = 2016,
+  url = {http://www.libelektra.org},
+  urldate = {2016-07-23}
+}
+
 @article{raab2010thesis,
 	title={A modular approach to configuration storage},
 	author={Raab, Markus},
