--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-elektra (0.8.18-1) UNRELEASED; urgency=medium
+elektra (0.8.18-1) unstable; urgency=medium
 
   * New upstream version.
 
- -- Markus Raab <debian@markus-raab.org>  Fri, 16 Sep 2016 09:52:09 +0200
+ -- Markus Raab <debian@markus-raab.org>  Sat, 17 Sep 2016 01:04:14 +0200
 
 elektra (0.8.17-1) unstable; urgency=medium
 
