added myself to AUTHORS

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -100,3 +100,8 @@ René Schwaiger <sanssecours@f-m.fm>
 Documentation, Bug Fixes
 Github User: @sanssecours
 Devel/Test on: macOS
+
+Marvin Mall <marvin-mall@msn.com>
+development of the REST service & frontend for sharing of conf. snippets, cachefilter plugin
+GitHub User: @Namoshek
+Devel/Test on: Debian Jessie
