--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -105,3 +105,7 @@ Marvin Mall <marvin-mall@msn.com>
 development of the REST service & frontend for sharing of conf. snippets, cachefilter plugin
 GitHub User: @Namoshek
 Devel/Test on: Debian Jessie
+
+Thomas Waser <thomas.waser@libelektra.org>
+GitHub User: @tom-wa
+Devel/Test on: Debian Testing/Sid
