rest-frontend: translation for structure pages, plugin readme codeblock for infos, makePrettyName improvements, markdown tables renderer override

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -56,6 +56,16 @@
 	"APP.BREADCRUMBS.MAIN.AUTH.REGISTER": "Register",
 	"APP.BREADCRUMBS.MAIN.CONVERSION": "Snippet conversion",
 	"APP.BREADCRUMBS.MAIN.DOCUMENTATION.TEMPLATE": "Documentation",
+	"APP.BREADCRUMBS.MAIN.DYN.BINDINGS": "Bindings",
+	"APP.BREADCRUMBS.MAIN.DYN.DECISIONS": "Decisions",
+	"APP.BREADCRUMBS.MAIN.DYN.DEVGETTINGSTARTED": "Getting started",
+	"APP.BREADCRUMBS.MAIN.DYN.DOCGETTINGSTARTED": "Getting started",
+	"APP.BREADCRUMBS.MAIN.DYN.EXAMPLES": "Examples",
+	"APP.BREADCRUMBS.MAIN.DYN.LIBRARIES": "Libraries",
+	"APP.BREADCRUMBS.MAIN.DYN.MANPAGES": "Manpages",
+	"APP.BREADCRUMBS.MAIN.DYN.PLUGINS": "Plugins",
+	"APP.BREADCRUMBS.MAIN.DYN.TOOLS": "Tools",
+	"APP.BREADCRUMBS.MAIN.DYN.TUTORIALS": "Tutorials",
 	"APP.BREADCRUMBS.MAIN.ENTRIES.CREATE": "New entry",
 	"APP.BREADCRUMBS.MAIN.ENTRIES.DETAILS": "Entry details",
 	"APP.BREADCRUMBS.MAIN.ENTRIES.EDIT": "Edit entry",
