rest-frontend: add news page and scripts that read, parse and copy news files

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -71,6 +71,7 @@
 	"APP.BREADCRUMBS.MAIN.ENTRIES.EDIT": "Edit entry",
 	"APP.BREADCRUMBS.MAIN.ENTRIES.SEARCH": "Snippet search",
 	"APP.BREADCRUMBS.MAIN.HOME": "Home",
+	"APP.BREADCRUMBS.MAIN.NEWS": "News",
 	"APP.BREADCRUMBS.MAIN.PROFILE": "Profile",
 	"APP.BREADCRUMBS.MAIN.TUTORIALS": "Tutorials",
 	"APP.BREADCRUMBS.MAIN.USERS.DETAILS": "User details",
@@ -273,10 +274,13 @@
 	"APP.NAV.BUTTON.MAIN.DOCUMENTATION": "Documentation",
 	"APP.NAV.BUTTON.MAIN.HOME": "Home",
 	"APP.NAV.BUTTON.MAIN.INTRODUCTION": "Getting started",
+	"APP.NAV.BUTTON.MAIN.NEWS": "News",
 	"APP.NAV.BUTTON.MAIN.TUTORIALS": "Tutorials",
 	"APP.NAV.BUTTON.MAIN.USERS": "Users",
 	"APP.NAV.BUTTON.NEWNETRY": "New snippet",
 	"APP.NAV.BUTTON.ACCOUNT": "Account",
+
+	"APP.NEWS.NAV.SECTION.VERSIONS": "Versions",
 
 	"APP.USERS.DETAILS.BUTTON.CHANGE_EMAIL": "Change email",
 	"APP.USERS.DETAILS.BUTTON.CHANGE_PASSWORD": "Change password",
