rest-frontend: add RSS generator for news
- takes the list of news posts, parses each post and creates a html file with the guid as filename
- output path can be configured

--- a/doc/news/2016-09-17_0.8.18.md
+++ b/doc/news/2016-09-17_0.8.18.md
@@ -193,11 +193,11 @@ You can download the release from
 [here](http://www.libelektra.org/ftp/elektra/releases/elektra-0.8.18.tar.gz)
 and also [here on github](https://github.com/ElektraInitiative/ftp/tree/master/releases/elektra-0.8.18.tar.gz)
 
-name: elektra-0.8.18.tar.gz
-size: 2582183
-md5sum: 62fe0fbf9ee57ffaa58a982f602f596a
-sha1: 743484e16b102a00cd58956a49f0c558939d56a8
-sha256: 9ee65895ba5cba6736c13c264637664c1410b25f4aaaeac8f1f83712ff93d53b
+- name: elektra-0.8.18.tar.gz
+- size: 2582183
+- md5sum: 62fe0fbf9ee57ffaa58a982f602f596a
+- sha1: 743484e16b102a00cd58956a49f0c558939d56a8
+- sha256: 9ee65895ba5cba6736c13c264637664c1410b25f4aaaeac8f1f83712ff93d53b
 
 This release tarball now is also available
 [signed by me using gpg](http://www.libelektra.org/ftp/elektra/releases/elektra-0.8.18.tar.gz.gpg)
