--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -268,6 +268,23 @@
 	"APP.GLOBAL.NOTIFICATION.MESSAGE.SERVER_NOT_REACHABLE": "It seems as if the service is not reachable. This may be either due to a downtime of the service or because of your internet connection.",
 	"APP.GLOBAL.TITLE": "ElektraInitiative",
 
+	"APP.HOME.HEADLINE.HOWITWORKS": "Want to see how it works?",
+	"APP.HOME.HEADLINE.SLOGAN.FIRST": "Make configuration great again.",
+	"APP.HOME.HEADLINE.SLOGAN.SECOND": "Elektra - the configuration framework for sophisticates",
+	"APP.HOME.HEADLINE.WHATSNEW": "What's new?",
+	"APP.HOME.LABEL.KEYFACT.1.HEADLINE": "Global configuration database",
+	"APP.HOME.LABEL.KEYFACT.1.DETAILS": "Elektra stores configuration in a global, hierarchical key database. Mount configuration files into the hierarchy, override single configuration parameters or use profiles.",
+	"APP.HOME.LABEL.KEYFACT.2.HEADLINE": "Human readable configuration files",
+	"APP.HOME.LABEL.KEYFACT.2.DETAILS": "All common and important configuration formats are supported through various storage plugins - even special configurations like hosts files.",
+	"APP.HOME.LABEL.KEYFACT.3.HEADLINE": "Extendable through plugins and tools",
+	"APP.HOME.LABEL.KEYFACT.3.DETAILS": "Elektra has a very powerful plugin system that allows for different kinds of plugins, with placements throughout the entire lifecycle of an application.",
+	"APP.HOME.LABEL.KEYFACT.4.HEADLINE": "Symbolic links",
+	"APP.HOME.LABEL.KEYFACT.4.DETAILS": "Eliminate your configuration duplicates with the help of symbolic links or compute configuration parameters from other configuration values.",
+	"APP.HOME.LABEL.KEYFACT.5.HEADLINE": "Configuration validation",
+	"APP.HOME.LABEL.KEYFACT.5.DETAILS": "Automate the validation of your configuration, define defaults and notify other applications about configuration changes - even remotely.",
+	"APP.HOME.LABEL.KEYFACT.6.HEADLINE": "Code generation",
+	"APP.HOME.LABEL.KEYFACT.6.DETAILS": "Utilize Elektras code generator to generate type-safe configuration access code based on a human-readable configuration specification.",
+
 	"APP.NAV.BUTTON.LOGIN": "Login",
 	"APP.NAV.BUTTON.LOGOUT": "Logout",
 	"APP.NAV.BUTTON.MAIN.CONVERSION": "Convert snippet",
