doc: rewrite paper

--- a/doc/paper/paper.bib
+++ b/doc/paper/paper.bib
@@ -83,3 +83,20 @@
 	url="http://dx.doi.org/10.1007/978-3-319-40171-3_4"
 }
 
+@inproceedings{raab2016persistent,
+	author = {Raab, Markus},
+	title = {Persistent Contextual Values As Inter-process Layers},
+	booktitle = {Proceedings of the 1st International Workshop on Mobile Development},
+	series = {Mobile! 2016},
+	year = {2016},
+	isbn = {978-1-4503-4643-6},
+	location = {Amsterdam, Netherlands},
+	pages = {9--16},
+	numpages = {8},
+	url = {http://doi.acm.org/10.1145/3001854.3001855},
+	doi = {10.1145/3001854.3001855},
+	acmid = {3001855},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {benchmark, configuration specification},
+} 
