rest-frontend: 'home' page
- change slogan & sub-slogan
- add buttons below slogan to getting started sections and examples

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -268,9 +268,11 @@
 	"APP.GLOBAL.NOTIFICATION.MESSAGE.SERVER_NOT_REACHABLE": "It seems as if the service is not reachable. This may be either due to a downtime of the service or because of your internet connection.",
 	"APP.GLOBAL.TITLE": "ElektraInitiative",
 
+	"APP.HOME.BUTTON.EXAMPLES": "Examples",
+	"APP.HOME.BUTTON.GETSTARTED": "Get started",
 	"APP.HOME.HEADLINE.HOWITWORKS": "Want to see how it works?",
-	"APP.HOME.HEADLINE.SLOGAN.FIRST": "Make configuration great again.",
-	"APP.HOME.HEADLINE.SLOGAN.SECOND": "Elektra - the configuration framework for sophisticates",
+	"APP.HOME.HEADLINE.SLOGAN.FIRST": "Configure everything.",
+	"APP.HOME.HEADLINE.SLOGAN.SECOND": "Elektra - the configuration framework for everyone",
 	"APP.HOME.HEADLINE.WHATSNEW": "What's new?",
 	"APP.HOME.LABEL.KEYFACT.1.HEADLINE": "Global configuration database",
 	"APP.HOME.LABEL.KEYFACT.1.DETAILS": "Elektra stores configuration in a global, hierarchical key database. Mount configuration files into the hierarchy, override single configuration parameters or use profiles.",
