rest-frontend: add preview description for news posts
- on the 'home' page listed news do now have an additional short, introductory description
- improved script for news generation
- added short description to all news posts

--- a/doc/news/2014-09-02_0.8.8.md
+++ b/doc/news/2014-09-02_0.8.8.md
@@ -3,6 +3,7 @@
 - guid: eca69e19-5ddb-438c-ac06-57c20b1a9160
 - author: Markus Raab
 - pubDate: Tue, 02 Sep 2014 17:31:42 +0200
+- shortDesc: adds 3-way merging, reworked documentation & improved kdb tool
 
 In this release we changed 578 files in 473 commits
 (68596 insertions(+), 59260 deletions(-) compared to Elektra 0.8.7).
