--- a/doc/news/2014-11-04_0.8.9.md
+++ b/doc/news/2014-11-04_0.8.9.md
@@ -1,8 +1,9 @@
-# 0.8.9 Release ##
+# 0.8.9 Release #
 
 - guid: 38640673-3e07-4cff-9647-f6bdd89b1b08
 - author: Markus Raab
 - pubDate: Tue, 04 Nov 2014 10:48:14 +0100
+- shortDesc: adds qt-gui, several optimizations & fixes
 
 Again we managed to do an amazing feature release in just two month.
 In 416 commits we modified 393 files with 23462 insertions(+) and
