--- a/doc/news/2015-04-03_0.8.11.md
+++ b/doc/news/2015-04-03_0.8.11.md
@@ -3,6 +3,7 @@
 - guid: 7d4647d4-4131-411e-9c2a-2aca39446e18
 - author: Markus Raab
 - pubDate: Fri, 03 Apr 2015 02:39:37 +0200
+- shortDesc: adds specification namespace & numerous improvements
 
 From the beginning of the Elektra Initiative, Elektra aimed at avoiding
 hard-coded information in the application and to make the application's
