--- a/doc/news/2015-07-13_0.8.12.md
+++ b/doc/news/2015-07-13_0.8.12.md
@@ -3,6 +3,7 @@
 - guid: 98770541-32a1-486a-98a1-d02f26afc81a
 - author: Markus Raab
 - pubDate: Sun, 12 Jul 2015 20:14:09 +0200
+- shortDesc: adds directory namespace & other improvements and fixes
 
 Again we managed to release with new features, many build system
 fixes and also other improvements.
