--- a/doc/news/2015-09-17_0.8.13.md
+++ b/doc/news/2015-09-17_0.8.13.md
@@ -3,6 +3,7 @@
 - guid: 3c00a5f1-c017-4555-92b5-a2cf6e0803e3
 - author: Markus Raab
 - pubDate: Thu, 17 Sep 2015 17:32:16 +0200
+- shortDesc: adds elektrify-getenv & other improvements
 
 Again we managed to release with many new features, many fixes
 and also other improvements.
