--- a/doc/news/2015-11-19_0.8.14.md
+++ b/doc/news/2015-11-19_0.8.14.md
@@ -3,6 +3,7 @@
 - guid: 519cbfac-6db5-4594-8a38-dec4c84b134f
 - author: Markus Raab
 - pubDate: Thu, 19 Nov 2015 17:48:14 +0100
+- shortDesc: adds massive documentation improvements & new or overhauled plugins
 
 Again we managed to release with many new features and plugins (lua, enum,
 list, crypto, csvstorage, conditionals, mathcheck, filecheck, logchange)
