--- a/doc/news/2016-02-16_0.8.15.md
+++ b/doc/news/2016-02-16_0.8.15.md
@@ -3,6 +3,7 @@
 - guid: 1ab4a560-c286-46d2-a058-1a8e7e208fe8
 - author: Markus Raab
 - pubDate: Tue, 16 Feb 2016 17:47:00 +0100
+- shortDesc: adds improved mounting, split of library & configuration validation
 
 In case you do not yet know about it, here is an abstract about Elektra:
 
