--- a/doc/news/2016-04-29_0.8.16.md
+++ b/doc/news/2016-04-29_0.8.16.md
@@ -3,6 +3,7 @@
 - guid: 9c9247ee-ee9c-4f4a-a68e-76959def9b82
 - author: Markus Raab
 - pubDate: Fri, 29 Apr 2016 12:45:39 +0200
+- shortDesc: adds stability improvements, configuration profiles & new plugins
 
 In case you do not yet know about it, here is an abstract about Elektra:
 
