--- a/doc/news/2016-06-14_0.8.17.md
+++ b/doc/news/2016-06-14_0.8.17.md
@@ -3,6 +3,7 @@
 - guid: e6153a39-c4bd-41c3-bc86-785d451eb6c5
 - author: Markus Raab
 - pubDate: Tue, 14 Jun 2016 08:32:44 +0200
+- shortDesc: adds several improvements & survey about configuration
 
 ## Survey ##
 
