--- a/doc/news/2016-09-17_0.8.18.md
+++ b/doc/news/2016-09-17_0.8.18.md
@@ -3,6 +3,7 @@
 - guid: 190576e0-9fef-486e-b8da-c4e75be08329
 - author: Markus Raab
 - pubDate: Fri, 16 Sep 2016 23:31:27 +0200
+- shortDesc: adds intercept open, crypto plugins & improved git-resolver
 
 ## What is Elektra? ##
 
