--- a/doc/news/2014-12-02_0.8.10.md
+++ b/doc/news/2014-12-02_0.8.10.md
@@ -3,6 +3,7 @@
 - guid: 6ce57ecf-420a-4a31-821e-1c5fe5532eb4
 - author: Markus Raab
 - pubDate: Tue, 02 Dec 2014 18:37:51 +0100
+- shortDesc: adds XDG/OpenICC compatibility & java binding
 
 Hello,
 
