rest-frontend: add more info to 'home' page
- changed sanitize strategy of translation module (support directives in loca-strings)
- re-ordered translation file
- added three new orientation blocks to the 'home' page with customizable content

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -274,18 +274,24 @@
 	"APP.HOME.HEADLINE.SLOGAN.FIRST": "Configure everything.",
 	"APP.HOME.HEADLINE.SLOGAN.SECOND": "Elektra - the configuration framework for everyone",
 	"APP.HOME.HEADLINE.WHATSNEW": "What's new?",
-	"APP.HOME.LABEL.KEYFACT.1.HEADLINE": "Global configuration database",
 	"APP.HOME.LABEL.KEYFACT.1.DETAILS": "Elektra stores configuration in a global, hierarchical key database. Mount configuration files into the hierarchy, override single configuration parameters or use profiles.",
-	"APP.HOME.LABEL.KEYFACT.2.HEADLINE": "Human readable configuration files",
+	"APP.HOME.LABEL.KEYFACT.1.HEADLINE": "Global configuration database",
 	"APP.HOME.LABEL.KEYFACT.2.DETAILS": "All common and important configuration formats are supported through various storage plugins - even special configurations like hosts files.",
-	"APP.HOME.LABEL.KEYFACT.3.HEADLINE": "Extendable through plugins and tools",
+	"APP.HOME.LABEL.KEYFACT.2.HEADLINE": "Human readable configuration files",
 	"APP.HOME.LABEL.KEYFACT.3.DETAILS": "Elektra has a very powerful plugin system that allows for different kinds of plugins, with placements throughout the entire lifecycle of an application.",
-	"APP.HOME.LABEL.KEYFACT.4.HEADLINE": "Symbolic links",
+	"APP.HOME.LABEL.KEYFACT.3.HEADLINE": "Extendable through plugins and tools",
 	"APP.HOME.LABEL.KEYFACT.4.DETAILS": "Eliminate your configuration duplicates with the help of symbolic links or compute configuration parameters from other configuration values.",
-	"APP.HOME.LABEL.KEYFACT.5.HEADLINE": "Configuration validation",
+	"APP.HOME.LABEL.KEYFACT.4.HEADLINE": "Symbolic links",
 	"APP.HOME.LABEL.KEYFACT.5.DETAILS": "Automate the validation of your configuration, define defaults and notify other applications about configuration changes - even remotely.",
-	"APP.HOME.LABEL.KEYFACT.6.HEADLINE": "Code generation",
+	"APP.HOME.LABEL.KEYFACT.5.HEADLINE": "Configuration validation",
 	"APP.HOME.LABEL.KEYFACT.6.DETAILS": "Utilize Elektras code generator to generate type-safe configuration access code based on a human-readable configuration specification.",
+	"APP.HOME.LABEL.KEYFACT.6.HEADLINE": "Code generation",
+	"APP.HOME.LABEL.ORIENTATION.1.DETAILS": "You need help in developing a custom plugin? Check out the <a ui-sref=\"main.dyn.tutorials({file: 'plugins-introduction'})\">plugin tutorial</a>!",
+	"APP.HOME.LABEL.ORIENTATION.1.HEADLINE": "Develop custom plugin",
+	"APP.HOME.LABEL.ORIENTATION.2.DETAILS": "Of course you can use Elektra also outside a C or C++ environment. Have a look at our <a ui-sref=\"main.dyn.bindings\">language bindings</a>!",
+	"APP.HOME.LABEL.ORIENTATION.2.HEADLINE": "Use Elektra outside C/C++",
+	"APP.HOME.LABEL.ORIENTATION.3.DETAILS": "Of course we can! A project like Elektra asks periodically for <a ui-sref=\"main.dyn.decisions\">decisions</a>!",
+	"APP.HOME.LABEL.ORIENTATION.3.HEADLINE": "Can you elaborate on the Why?",
 
 	"APP.NAV.BUTTON.LOGIN": "Login",
 	"APP.NAV.BUTTON.LOGOUT": "Logout",
