Add @0003088 to AUTHORS, add libelektra DBus support

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -114,3 +114,8 @@ Devel/Test on: Debian Jessie
 Thomas Waser <thomas.waser@libelektra.org>
 GitHub User: @tom-wa
 Devel/Test on: Debian Testing/Sid
+
+
+Raffael Pancheri <raffael@libelektra.org>
+GitHub User: @0003088
+Design and Implementation of the qml-gui
