rest-frontend: rephrase EN translations

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -36,8 +36,8 @@
 	"APP.AUTH.REGISTRATION.LABEL.VALIDATION.USERNAME.PATTERN": "The username may only contain letters, digits, dashes and dots.",
 	"APP.AUTH.REGISTRATION.LABEL.VALIDATION.USERNAME.REQUIRED": "You have to enter a username.",
 	"APP.AUTH.REGISTRATION.NOTIFICATION.HEADER": "Account Registration",
-	"APP.AUTH.REGISTRATION.NOTIFICATION.MESSAGE.REQUEST_MALFORMED_DATA": "An error occured. If the error stays, please contact the administrator.",
-	"APP.AUTH.REGISTRATION.NOTIFICATION.MESSAGE.REQUEST_UNSUPPORTED_CONTENT_TYPE": "An error occured. If the error stays, please contact the administrator.",
+	"APP.AUTH.REGISTRATION.NOTIFICATION.MESSAGE.REQUEST_MALFORMED_DATA": "An error occured. Please contact the administrator, if the error persists.",
+	"APP.AUTH.REGISTRATION.NOTIFICATION.MESSAGE.REQUEST_UNSUPPORTED_CONTENT_TYPE": "An error occured. Please contact the administrator, if the error persists.",
 	"APP.AUTH.REGISTRATION.NOTIFICATION.MESSAGE.USER_CREATE_INVALID_EMAIL": "The submitted email address is invalid.",
 	"APP.AUTH.REGISTRATION.NOTIFICATION.MESSAGE.USER_CREATE_INVALID_PASSWORD": "The submitted password does not satisfy the requirements.",
 	"APP.AUTH.REGISTRATION.NOTIFICATION.MESSAGE.USER_CREATE_INVALID_USERNAME": "The submitted username does not match the requirements.",
@@ -99,8 +99,8 @@
 	"APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_SUCCESSFUL": "The snippet has been converted successfully. Should you experience any crudities, please let us know (use the button below)!",
 	"APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_UNABLE_TO_CONVERT_SNIPPET": "The submitted configuration snippet cannot be represented using the specified output format. Some formats are limited in terms of structure, which prohibits arbitrary conversions. Please try another format.",
 	"APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_UNABLE_TO_PARSE_SNIPPET": "The submitted configuration snippet could not be parsed within the specified input format. If you are sure the format is correct, please try one of the other plugins.",
-	"APP.CONVERSION.NOTIFICATION.MESSAGE.REQUEST_MALFORMED_DATA": "An error occured. If the error stays, please contact the administrator.",
-	"APP.CONVERSION.NOTIFICATION.MESSAGE.REQUEST_UNSUPPORTED_CONTENT_TYPE": "An error occured. If the error stays, please contact the administrator.",
+	"APP.CONVERSION.NOTIFICATION.MESSAGE.REQUEST_MALFORMED_DATA": "An error occured. Please contact the administrator, if the error persists.",
+	"APP.CONVERSION.NOTIFICATION.MESSAGE.REQUEST_UNSUPPORTED_CONTENT_TYPE": "An error occured. Please contact the administrator, if the error persists.",
 	"APP.CONVERSION.FORM.OPTIONS.FORMATS": "{{ format }} (plugin: {{ plugin.name }})",
 	"APP.CONVERSION.PANEL.HEADING": "Configuration snippet converter",
 
@@ -125,8 +125,8 @@
 	"APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_MISSING_SLUG": "You have to submit a slug.",
 	"APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_MISSING_TITLE": "You have to submit a title for the snippet.",
 	"APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.NEED_AUTHENTICATION": "You have to be authenticated to perform this action. If the error remains, please refresh the page and login again if necessary.",
-	"APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.REQUEST_MALFORMED_DATA": "An error occured. If the error stays, please contact the administrator.",
-	"APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.REQUEST_UNSUPPORTED_CONTENT_TYPE": "An error occured. If the error stays, please contact the administrator.",
+	"APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.REQUEST_MALFORMED_DATA": "An error occured. Please contact the administrator, if the error persists.",
+	"APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.REQUEST_UNSUPPORTED_CONTENT_TYPE": "An error occured. Please contact the administrator, if the error persists.",
 	"APP.ENTRIES.CREATE.PANEL.HEADING": "Create new configuration snippet",
 
 	"APP.ENTRIES.DELETE.BUTTON.ABORT": "No, abort.",
@@ -175,8 +175,8 @@
 	"APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_MISSING_TITLE": "You have to submit a title for the snippet.",
 	"APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_UPDATED_SUCCESSFULLY": "The configuration snippet has been updated successfully. Please check if the import of the new configuration has not caused any issues. In case something is wrong, simply edit the snippet again!",
 	"APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.NEED_AUTHENTICATION": "You have to be authenticated to perform this action. If the error remains, please refresh the page and login again if necessary.",
-	"APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.REQUEST_MALFORMED_DATA": "An error occured. If the error stays, please contact the administrator.",
-	"APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.REQUEST_UNSUPPORTED_CONTENT_TYPE": "An error occured. If the error stays, please contact the administrator.",
+	"APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.REQUEST_MALFORMED_DATA": "An error occured. Please contact the administrator, if the error persists.",
+	"APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.REQUEST_UNSUPPORTED_CONTENT_TYPE": "An error occured. Please contact the administrator, if the error persists.",
 	"APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.USER_INSUFFICIENT_PERMISSIONS": "Your have insufficient permissions to perform this action. Only moderators and the owner of a snippet can change it.",
 	"APP.ENTRIES.EDIT.PANEL.HEADING": "Edit configuration snippet",
 
@@ -337,10 +337,10 @@
 	"APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_UPDATE_INVALID_EMAIL": "The submitted email does not match the requirements.",
 	"APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_UPDATE_INVALID_PASSWORD": "The submitted password does not match the requirements.",
 	"APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_UPDATE_INVALID_RANK": "The submitted rank does not match the requirements.",
-	"APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_UPDATE_UNKNOWN_ERROR": "An unknown error occured, please try again. If the error stays, please contact the administrator.",
+	"APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_UPDATE_UNKNOWN_ERROR": "An unknown error occured, please try again. Please contact the administrator, if the error persists.",
 	"APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_UPDATED_SUCCESSFULLY": "The changes have been saved successfully!",
-	"APP.USERS.DETAILS.NOTIFICATION.MESSAGE.REQUEST_MALFORMED_DATA": "An error occured. If the error stays, please contact the administrator.",
-	"APP.USERS.DETAILS.NOTIFICATION.MESSAGE.REQUEST_UNSUPPORTED_CONTENT_TYPE": "An error occured. If the error stays, please contact the administrator.",
+	"APP.USERS.DETAILS.NOTIFICATION.MESSAGE.REQUEST_MALFORMED_DATA": "An error occured. Please contact the administrator, if the error persists.",
+	"APP.USERS.DETAILS.NOTIFICATION.MESSAGE.REQUEST_UNSUPPORTED_CONTENT_TYPE": "An error occured. Please contact the administrator, if the error persists.",
 	"APP.USERS.DETAILS.PANEL.CHANGE_EMAIL.HEADING": "Change email",
 	"APP.USERS.DETAILS.PANEL.CHANGE_PASSWORD.HEADING": "Change password",
 	"APP.USERS.DETAILS.PANEL.CHANGE_RANK.HEADING": "Change rank",
