--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -4,16 +4,16 @@
     "APP.AUTH.LOGIN.LABEL.USERNAME": "Username:",
     "APP.AUTH.LOGIN.LABEL.PASSWORD": "Password:",
     "APP.AUTH.LOGIN.LABEL.VALIDATION.PASSWORD.REQUIRED": "Please enter your password to login.",
-    "APP.AUTH.LOGIN.LABEL.VALIDATION.USERNAME.MAXLENGTH": "Your entered username is too long and cannot be processed.",
+    "APP.AUTH.LOGIN.LABEL.VALIDATION.USERNAME.MAXLENGTH": "Your entered username is too long and cannot be processed. Please make it shorter.",
     "APP.AUTH.LOGIN.LABEL.VALIDATION.USERNAME.PATTERN": "Your entered username contains unsupported characters.",
     "APP.AUTH.LOGIN.LABEL.VALIDATION.USERNAME.REQUIRED": "Please enter your username to login.",
     "APP.AUTH.LOGIN.NOTIFICATION.HEADER": "Login",
     "APP.AUTH.LOGIN.NOTIFICATION.MESSAGE.AUTH_INVALID_PASSWORD": "The entered password is wrong, please correct your input.",
     "APP.AUTH.LOGIN.NOTIFICATION.MESSAGE.AUTH_UNKNOWN_USERNAME": "There is no account registered for the entered username.",
-    "APP.AUTH.LOGIN.NOTIFICATION.MESSAGE.SUCCESS": "Login successful!",
+    "APP.AUTH.LOGIN.NOTIFICATION.MESSAGE.SUCCESS": "Login successful. Welcome to Elektra!",
     "APP.AUTH.LOGIN.PANEL.HEADING": "Authentication",
-    "APP.AUTH.LOGIN.PLACEHOLDER.USERNAME": "Enter your username",
-    "APP.AUTH.LOGIN.PLACEHOLDER.PASSWORD": "Enter your password",
+    "APP.AUTH.LOGIN.PLACEHOLDER.USERNAME": "Please enter your username",
+    "APP.AUTH.LOGIN.PLACEHOLDER.PASSWORD": "Please enter your password",
     
     "APP.AUTH.LOGOUT.NOTIFICATION.HEADER": "Logout",
     "APP.AUTH.LOGOUT.NOTIFICATION.MESSAGE.SUCCESS": "Logout successful!",
@@ -47,10 +47,10 @@
     "APP.AUTH.REGISTRATION.NOTIFICATION.MESSAGE.USER_CREATE_USER_DOES_ALREADY_EXIST": "A user with the entered name does already exist. Please choose another name.",
     "APP.AUTH.REGISTRATION.NOTIFICATION.MESSAGE.USER_CREATED_SUCCESSFULLY": "Your account has been created successfully. You can login now.",
     "APP.AUTH.REGISTRATION.PANEL.HEADING": "Registration",
-    "APP.AUTH.REGISTRATION.PLACEHOLDER.EMAIL": "Enter an email address",
-    "APP.AUTH.REGISTRATION.PLACEHOLDER.PASSWORD": "Enter a password",
-    "APP.AUTH.REGISTRATION.PLACEHOLDER.PASSWORD_CONFIRMATION": "Confirm password",
-    "APP.AUTH.REGISTRATION.PLACEHOLDER.USERNAME": "Enter a username",
+    "APP.AUTH.REGISTRATION.PLACEHOLDER.EMAIL": "Please enter an email address",
+    "APP.AUTH.REGISTRATION.PLACEHOLDER.PASSWORD": "Please enter a password",
+    "APP.AUTH.REGISTRATION.PLACEHOLDER.PASSWORD_CONFIRMATION": "Please confirm your password",
+    "APP.AUTH.REGISTRATION.PLACEHOLDER.USERNAME": "Please enter a username",
     
     "APP.BREADCRUMBS.MAIN.AUTH.LOGIN": "Login",
     "APP.BREADCRUMBS.MAIN.AUTH.REGISTER": "Register",
@@ -91,14 +91,14 @@
     "APP.CONVERSION.LABEL.VALIDATION.OUTPUT.FORMAT.REQUIRED": "You have to select an output format.",
     "APP.CONVERSION.NOTIFICATION.HEADER": "Snippet conversion",
     "APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_INVALID_INPUT_FORMAT": "The submitted input format is not supported.",
-    "APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_INVALID_INPUT_SNIPPET": "The submitted configuration snippet could not be parsed within the submitted format. If you are sure the format is correct, please try one of the other plugins.",
+    "APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_INVALID_INPUT_SNIPPET": "The submitted configuration snippet could not be parsed within the submitted format. If you are sure the format is correct, please report us the error on GitHub (use the button below)! You can also try one of the other plugins in the meantime.",
     "APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_INVALID_OUTPUT_FORMAT": "The submitted output format is not supported.",
     "APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_MISSING_INPUT_FORMAT": "You have to submit an input format.",
     "APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_MISSING_INPUT_SNIPPET": "You have to submit an input snippet.",
     "APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_MISSING_OUTPUT_FORMAT": "You have to submit an output format.",
-    "APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_SUCCESSFUL": "The snippet has been converted successfully. Should you experience any crudities, please let us know (use the button below)!",
-    "APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_UNABLE_TO_CONVERT_SNIPPET": "The submitted configuration snippet cannot be represented using the specified output format. Some formats are limited in terms of structure, which prohibits arbitrary conversions. Please try another format.",
-    "APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_UNABLE_TO_PARSE_SNIPPET": "The submitted configuration snippet could not be parsed within the specified input format. If you are sure the format is correct, please try one of the other plugins.",
+    "APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_SUCCESSFUL": "The snippet has been converted successfully. Should you experience any crudities, please let us know (use the GitHub button below)!",
+    "APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_UNABLE_TO_CONVERT_SNIPPET": "The submitted configuration snippet cannot be represented using the specified output format. Some formats are limited in terms of structure, which prohibits arbitrary conversions. Please try another output format instead. If you think the error is on our side, let us know (use the GitHub button below)!",
+    "APP.CONVERSION.NOTIFICATION.MESSAGE.CONVERT_UNABLE_TO_PARSE_SNIPPET": "The submitted configuration snippet could not be parsed within the specified input format. If you are sure the format is correct, please report us the error on GitHub (use the button below)! You can also try one of the other plugins in the meantime.",
     "APP.CONVERSION.NOTIFICATION.MESSAGE.REQUEST_MALFORMED_DATA": "An error occured. Please contact the administrator, if the error persists.",
     "APP.CONVERSION.NOTIFICATION.MESSAGE.REQUEST_UNSUPPORTED_CONTENT_TYPE": "An error occured. Please contact the administrator, if the error persists.",
     "APP.CONVERSION.FORM.OPTIONS.FORMATS": "{{ format }} (plugin: {{ plugin.name }})",
@@ -109,7 +109,7 @@
     "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_DOES_ALREADY_EXIST": "An entry with the entered details (organization, application, scope and slug) does already exist. Please choose different values.",
     "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_INVALID_APPLICATION": "The submitted application name does not match the requirements.",
     "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_INVALID_CONFIGURATION_FORMAT": "The submitted configuration format is not supported.",
-    "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_INVALID_CONFIGURATION_VALUE": "The submitted configuration snippet could not be parsed within the submitted format. If you are sure the format is correct, please try one of the other plugins.",
+    "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_INVALID_CONFIGURATION_VALUE": "The submitted configuration snippet could not be parsed within the submitted format. If you are sure the format is correct, please report us the error on GitHub (use the button below)! You can also try one of the other plugins in the meantime.",
     "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_INVALID_DESCRIPTION": "The submitted description does not match the requirements.",
     "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_INVALID_ORGANIZATION": "The submitted organization name does not match the requirements.",
     "APP.ENTRIES.CREATE.NOTIFICATION.MESSAGE.ENTRY_INVALID_SCOPE": "The submitted application scope does not match the requirements",
@@ -135,7 +135,7 @@
     "APP.ENTRIES.DELETE.LABEL.TITLE": "Delete configuration snippet",
     "APP.ENTRIES.DELETE.NOTIFICATION.HEADER": "Delete configuration snippet",
     "APP.ENTRIES.DELETE.NOTIFICATION.MESSAGE.ENTRY_DELETED_SUCCESSFULLY": "The snippet has been deleted successfully!",
-    "APP.ENTRIES.DELETE.NOTIFICATION.MESSAGE.ENTRY_DOES_NOT_EXIST": "The entry you are attempting to delete does not exist. It is possible that it has already been deleted while you were watching it.",
+    "APP.ENTRIES.DELETE.NOTIFICATION.MESSAGE.ENTRY_DOES_NOT_EXIST": "The entry you are attempting to delete does not exist. Looks like it was deleted while you were looking at it.",
     "APP.ENTRIES.DELETE.NOTIFICATION.MESSAGE.NEED_AUTHENTICATION": "You have to be authenticated to perform this action. If the error remains, please refresh the page and login again if necessary.",
     "APP.ENTRIES.DELETE.NOTIFICATION.MESSAGE.USER_INSUFFICIENT_PERMISSIONS": "Your have insufficient permissions to perform this action. Only moderators and the owner of a snippet can change it.",
     
@@ -163,9 +163,9 @@
     "APP.ENTRIES.DETAILS.TABLE.HEADER.TAGS": "Tags:",
     
     "APP.ENTRIES.EDIT.NOTIFICATION.HEADER": "Edit configuration snippet",
-    "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_DOES_NOT_EXIST": "The entry you are attempting to change does not exist. It is possible that it has been deleted in the mean time.",
+    "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_DOES_NOT_EXIST": "The entry you are attempting to change does not exist. Looks like it was deleted while you were looking at it.",
     "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_INVALID_CONFIGURATION_FORMAT": "The submitted configuration format is not supported.",
-    "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_INVALID_CONFIGURATION_VALUE": "The submitted configuration snippet could not be parsed within the submitted format. If you are sure the format is correct, please try one of the other plugins.",
+    "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_INVALID_CONFIGURATION_VALUE": "The submitted configuration snippet could not be parsed within the submitted format. If you are sure the format is correct, please report us the error on GitHub (use the button below)! You can also try one of the other plugins in the meantime.",
     "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_INVALID_DESCRIPTION": "The submitted description does not match the requirements.",
     "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_INVALID_TAG": "One or more of the submitted tags does not match the requirements.",
     "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.ENTRY_INVALID_TITLE": "The submitted title does not match the requirements.",
@@ -180,9 +180,9 @@
     "APP.ENTRIES.EDIT.NOTIFICATION.MESSAGE.USER_INSUFFICIENT_PERMISSIONS": "Your have insufficient permissions to perform this action. Only moderators and the owner of a snippet can change it.",
     "APP.ENTRIES.EDIT.PANEL.HEADING": "Edit configuration snippet",
     
-    "APP.ENTRIES.FORM.ALTTEXT.APPLICATION.HINT": "What is the name of the application you want to share a configuration snippet for? Common web applications would be the Tomcat webserver, a MySQL database server and the nginx webserver.",
-    "APP.ENTRIES.FORM.ALTTEXT.ORGANIZATION.HINT": "Which organization built the application you want to paste a snippet for? For example, Windows has been built by Microsoft and the Tomcat webserver by Apache.",
-    "APP.ENTRIES.FORM.ALTTEXT.SCOPE.HINT": "The scope of a configuration can vary from application to application. Sometimes applications have multiple configuration files, which would make the filename of the configuration file a good scope. Also the version of the application can be used as scope.",
+    "APP.ENTRIES.FORM.ALTTEXT.APPLICATION.HINT": "What is the name of the application you want to share a configuration snippet for? In case of an Apache Tomcat webserver snippet, you should use 'tomcat' here.",
+    "APP.ENTRIES.FORM.ALTTEXT.ORGANIZATION.HINT": "Which organization builds the application you want to paste a snippet for? If you would like to share a snippet for the Apache Tomcat webserver for example, you could use either 'apache' or the reverse URL 'org.apache'.",
+    "APP.ENTRIES.FORM.ALTTEXT.SCOPE.HINT": "The scope of a configuration should contain the version of the application (e.g. 'v1'). Additionally, it may contain the name of the configuration file in question, if multiple of these files exist for the application. The structure should be '(version)[.component]', e.g. 'v7.server.xml' for a Tomcat 7 server.xml configuration file.",
     "APP.ENTRIES.FORM.ALTTEXT.SLUG.HINT": "The slug is the last part of the unique identifier of a snippet. Normally it is automatically generated from the snippet title, but in case it is already used or you simply want to define your own slug, you can do so by enabling the input field.",
     "APP.ENTRIES.FORM.ALTTEXT.SLUG.MANUALLY": "By enabling this input field, you can define the slug yourself.",
     "APP.ENTRIES.FORM.BUTTON.ABORT": "Abort",
@@ -331,7 +331,7 @@
     "APP.USERS.DETAILS.NOTIFICATION.HEADER": "Change account information",
     "APP.USERS.DETAILS.NOTIFICATION.MESSAGE.NEED_AUTHENTICATION": "You have to be authenticated to perform this action.",
     "APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_INSUFFICIENT_PERMISSIONS": "You have insufficient permissions to performt his action.",
-    "APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_NOT_FOUND": "The user account you are trying to change does not exist. It is possible that it has been deleted in the mean time.",
+    "APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_NOT_FOUND": "The user account you are trying to change does not exist. It is possible that it has been deleted in the meantime.",
     "APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_UPDATE_INVALID_EMAIL": "The submitted email does not match the requirements.",
     "APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_UPDATE_INVALID_PASSWORD": "The submitted password does not match the requirements.",
     "APP.USERS.DETAILS.NOTIFICATION.MESSAGE.USER_UPDATE_INVALID_RANK": "The submitted rank does not match the requirements.",
