--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -70,6 +70,8 @@
     "APP.BREADCRUMBS.MAIN.ENTRIES.DETAILS": "Entry details",
     "APP.BREADCRUMBS.MAIN.ENTRIES.EDIT": "Edit entry",
     "APP.BREADCRUMBS.MAIN.ENTRIES.SEARCH": "Snippet search",
+    "APP.BREADCRUMBS.MAIN.ERROR": "Error",
+    "APP.BREADCRUMBS.MAIN.ERROR.404": "404 - Not Found",
     "APP.BREADCRUMBS.MAIN.HOME": "Home",
     "APP.BREADCRUMBS.MAIN.NEWS": "News",
     "APP.BREADCRUMBS.MAIN.PROFILE": "Profile",
@@ -262,7 +264,11 @@
     "APP.ENTRIES.SEARCH.TABLE.HEADER.SCOPE": "Scope",
     "APP.ENTRIES.SEARCH.TABLE.HEADER.SLUG": "Slug",
     "APP.ENTRIES.SEARCH.TABLE.HEADER.TITLE": "Title",
-    
+
+    "APP.ERROR.404.HELP": "Are you sure you entered the right URL? You can also use the menu above to look around.<br />If the site seems broken, please contact us using the feedback button on the bottom.",
+    "APP.ERROR.404.MESSAGE": "Sorry, we couldn't find the page you were looking for!",
+    "APP.ERROR.404.TITLE": "Not Found",
+
     "APP.GLOBAL.FOOTER.LINK.TITLE.FEEDBACK": "Feedback",
     "APP.GLOBAL.FOOTER.LINK.TITLE.SCROLLTOTOP": "Scroll to Top",
     "APP.GLOBAL.NOTIFICATION.HEADER.CONNECTION_ISSUE": "Connection issues",
