rest-frontend: change texts
see #1151

--- a/src/tools/rest-frontend/public/assets/translations/en.json
+++ b/src/tools/rest-frontend/public/assets/translations/en.json
@@ -283,15 +283,15 @@
     "APP.HOME.HEADLINE.WHATSNEW": "What's new?",
     "APP.HOME.LABEL.KEYFACT.1.DETAILS": "Elektra stores configuration in a global, hierarchical key database. Mount configuration files into the hierarchy, override single configuration parameters or use profiles.",
     "APP.HOME.LABEL.KEYFACT.1.HEADLINE": "Global configuration database",
-    "APP.HOME.LABEL.KEYFACT.2.DETAILS": "All common and important configuration formats are supported through various storage plugins - even special configuration files like /etc/hosts.",
+    "APP.HOME.LABEL.KEYFACT.2.DETAILS": "All common and important configuration formats are supported through various storage plugins: XML, JSON, INI or even special configuration files like /etc/hosts.",
     "APP.HOME.LABEL.KEYFACT.2.HEADLINE": "Human readable configuration files",
-    "APP.HOME.LABEL.KEYFACT.3.DETAILS": "Elektra has a very powerful plugin system that allows for different kinds of plugins, with placements throughout the entire lifecycle of an application.",
+    "APP.HOME.LABEL.KEYFACT.3.DETAILS": "Nearly all functionality of Elektra is implemented in plugins which can be combined to powerful functionality.",
     "APP.HOME.LABEL.KEYFACT.3.HEADLINE": "Extendable through plugins and tools",
-    "APP.HOME.LABEL.KEYFACT.4.DETAILS": "Eliminate your configuration duplicates with the help of symbolic links or compute configuration parameters from other configuration values.",
-    "APP.HOME.LABEL.KEYFACT.4.HEADLINE": "Symbolic links",
-    "APP.HOME.LABEL.KEYFACT.5.DETAILS": "Automate the validation of your configuration, define defaults and notify other applications about configuration changes - even remotely.",
-    "APP.HOME.LABEL.KEYFACT.5.HEADLINE": "Configuration validation",
-    "APP.HOME.LABEL.KEYFACT.6.DETAILS": "Utilize Elektras code generator to generate type-safe configuration access code based on a human-readable configuration specification.",
+    "APP.HOME.LABEL.KEYFACT.4.DETAILS": "Automate configuration tasks with powerful tools, surf through configuration with GUIs, and notify other applications about configuration changes.",
+    "APP.HOME.LABEL.KEYFACT.4.HEADLINE": "Batteries included",
+    "APP.HOME.LABEL.KEYFACT.5.DETAILS": "Validate configuration immediately on changes, eliminate your configuration duplicates with the help of symbolic links or compute configuration parameters from other configuration values.",
+    "APP.HOME.LABEL.KEYFACT.5.HEADLINE": "Configuration specification",
+    "APP.HOME.LABEL.KEYFACT.6.DETAILS": "Utilize Elektra's code generator to generate type-safe configuration access code based on the same specification as used for validation.",
     "APP.HOME.LABEL.KEYFACT.6.HEADLINE": "Code generation",
     "APP.HOME.LABEL.ORIENTATION.1.DETAILS": "You need help in developing a custom plugin? Check out the <a ui-sref=\"main.dyn.tutorials({file: 'plugins-introduction'})\">plugin tutorial</a>!",
     "APP.HOME.LABEL.ORIENTATION.1.HEADLINE": "Develop custom plugin",
